# audiowav

./: .gitignore  Makefile.am  README.rst  configure.ac  debugconfigure
src/: dsound.cpp  dsound.hpp  logging.hpp  main.cpp  util.cpp  util.hpp  wavegen.cpp  wavegen.hpp
tests/: util_test.cpp  wavegen_test.cpp
